# agent-gateway

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README_zh-CN.md  package.json  rspress.config.ts  skills-lock.json  tsconfig.base.json  tsconfig.json
crates/agw-api/: Cargo.toml
crates/agw-api/src/: config.yaml  error.rs  lib.rs  main.rs  router.rs  state.rs
crates/agw-api/src/handlers/: agent.rs  apikey.rs  config.rs  custom_agent.rs  custom_provider.rs  fallback.rs  health.rs  log_detail.rs  logs.rs  mod.rs  plan.rs  plugin.rs  provider.rs  quota.rs  stats.rs
crates/agw-api/src/middleware/: auth.rs  mod.rs  rate_limit.rs  request_id.rs  security.rs  timing.rs
crates/agw-api/src/types/: agent.rs  api.rs  apikey.rs  config.rs  custom_agent.rs  custom_provider.rs  fallback.rs  mod.rs  plan.rs  plugin.rs  provider.rs  quota.rs  stats.rs
crates/agw-api/tests/: agent_test.rs  apikey_test.rs  config_test.rs  fallback_test.rs  health_check.rs  health_test.rs  logs_test.rs  plan_test.rs  plugin_test.rs  provider_test.rs  quota_test.rs  stats_test.rs
crates/agw-api/tests/common/: mod.rs
crates/agw-cli/: Cargo.toml
crates/agw-cli/src/: main.rs
crates/agw-cli/src/commands/: agent.rs  completion.rs  config.rs  fallback.rs  log.rs  mod.rs  plan.rs  plugin.rs  provider.rs  quota.rs  serve.rs
crates/agw-core/: Cargo.toml
crates/agw-core/src/: agw.yaml  lib.rs  model.rs  model_types.rs  paths.rs  test_utils.rs
crates/agw-core/src/business/: agent_config.rs  custom_agent.rs  custom_provider.rs  fallback.rs  health_checker.rs  mod.rs  plan.rs  provider_engine.rs  quota.rs
crates/agw-core/src/core/: forwarder.rs  gateway.rs  handler_anthropic.rs  handler_openai.rs  mod.rs  state.rs  unified_router.rs
crates/agw-core/src/core/converter/: anthropic_to_openai.rs  mod.rs  openai_to_anthropic.rs  sse.rs
crates/agw-core/src/plugin/: engine.rs  host.rs  installer.rs  lifecycle.rs  manifest.rs  mod.rs  provider_plugin.rs  registry.rs
crates/agw-core/src/security/: api_key_helper.rs  encryption.rs  mod.rs
crates/agw-core/src/storage/: config.rs  manager.rs  mod.rs  request_log.rs  sqlite.rs
crates/agw-core/tests/: integration_test.rs
crates/agw-core/tests/business/: main.rs  test_agent_config.rs  test_fallback_engine.rs  test_health_checker.rs  test_plan_manager.rs  test_provider_engine.rs  test_quota_tracker.rs
crates/agw-core/tests/core/: main.rs  mod.rs  test_converter_request.rs  test_converter_response.rs  test_converter_sse.rs  test_forwarder.rs  test_gateway_handlers.rs  test_model_types.rs  test_state.rs
crates/agw-core/tests/security/: main.rs  test_api_key_helper.rs  test_encryption.rs
crates/agw-core/tests/storage/: main.rs  test_config_store.rs  test_request_log_store.rs  test_sqlite_store.rs  test_storage_manager.rs
crates/agw-gui/: Cargo.toml  tauri.conf.json
crates/agw-gui/src/: api_invoke.rs  clipboard.rs  config.rs  gateway.rs  main.rs  tray.rs
crates/agw-napi/: Cargo.toml  agw-napi.node  napi.toml  package.json
crates/agw-napi/src/: enums.rs  gateway.rs  lib.rs  models.rs
docs/: README.md  TODO.md  api.md  cli.md  design.md  dev.md  index.md  process.md
docs/guide/: 01-intro.md  02-install.md  03-plan.md  04-cli.md  05-fallback.md  06-quota.md  07-api.md  08-converter.md  09-gui.md  10-plugin.md  11-troubleshooting.md  README.md
docs/module/: _meta.json  core-ts.md  core.md  gui.md  node-ts.md
docs/plugin/: index.md
scripts/: copy-native.js
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.vue  api.ts  main.ts  router.ts  types.ts
web/src/components/: AgentSelector.vue  ApiKeyInput.vue  PlanCard.vue  PlanSelector.vue  PluginCard.vue  ProviderGrid.vue
web/src/composables/: useAgents.ts  useClipboardMonitor.ts  useGateway.ts  useLogs.ts  usePlans.ts  usePlugins.ts  useProviders.ts  useQuota.ts  useTheme.ts
web/src/constants/: HealthLabel.ts
web/src/styles/: theme.css
web/src/views/: Dashboard.vue  Fallback.vue  Logs.vue  OnboardingGuide.vue  PlanWizard.vue  Plans.vue  Plugins.vue  Quota.vue  Settings.vue  Stats.vue
web/src/views/settings/: Agents.vue  Providers.vue
