[workspace]
resolver = "2"
members = [
    "crates/agw-core",
    "crates/agw-cli",
    "crates/agw-gui",
    "crates/agw-api",
    "crates/agw-napi",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["agent-gateway team"]
license = "MIT OR Apache-2.0"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }

# HTTP server & client
axum = "0.7"
reqwest = { version = "0.12", features = ["json", "stream"] }
hyper = { version = "1.3", features = ["full"] }
http-body = "0.4"
http-body-util = "0.1"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Crypto
aes-gcm = "0.10"
rand = "0.8"

# WebAssembly
wasmtime = "20"
wasmtime-wasi = "20"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
once_cell = "1.19"
dashmap = "5.5"
rustc-hash = "2.0"
shellexpand = "3.1"
dirs = "5.0"
open = "5.1"
base64 = "0.22"
bytes = "1"
futures = "0.3"
futures-util = "0.3"
tokio-stream = "0.1"

# Testing
mockall = "0.12"
wiremock = "0.6"
tokio-test = "0.4"
tempfile = "3"

# Tauri (GUI)
[workspace.metadata.tauri]
version = "2.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true