[package]
name = "agw-api"
version.workspace = true
edition.workspace = true

[lib]
name = "agw_api"
path = "src/lib.rs"

[[bin]]
name = "agw-api"
path = "src/main.rs"

[dependencies]
agw-core = { path = "../agw-core" }
tokio.workspace = true
axum.workspace = true
reqwest.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid = { version = "1.11", features = ["v4", "serde"] }
thiserror = "2.0"

[dev-dependencies]
mockall.workspace = true
wiremock.workspace = true
tokio-test.workspace = true
tempfile.workspace = true
tower = { workspace = true, features = ["util"] }
reqwest = { workspace = true, features = ["json"] }