[package]
name = "agw-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "agw"
path = "src/main.rs"

[dependencies]
agw-core = { path = "../agw-core" }
tokio.workspace = true
axum.workspace = true
clap.workspace = true
clap_complete.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
dirs.workspace = true
uuid.workspace = true

[dev-dependencies]
mockall.workspace = true
wiremock.workspace = true
tokio-test.workspace = true
tempfile.workspace = true
reqwest = { workspace = true, features = ["json"] }