[package]
name = "agw-core"
version.workspace = true
edition.workspace = true

[lib]
name = "agw_core"
path = "src/lib.rs"

[dependencies]
tokio.workspace = true
axum = { workspace = true, features = ["macros"] }
reqwest.workspace = true
http-body.workspace = true
http-body-util.workspace = true
base64.workspace = true
bytes.workspace = true
futures.workspace = true
hyper.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
rusqlite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
aes-gcm.workspace = true
rand.workspace = true
wasmtime = { workspace = true, features = ["cranelift"] }
wasmtime-wasi.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
once_cell.workspace = true
dashmap.workspace = true
rustc-hash.workspace = true
shellexpand.workspace = true
dirs.workspace = true
open.workspace = true
flate2 = "1"
futures-util.workspace = true
tokio-stream.workspace = true

[dev-dependencies]
mockall.workspace = true
wiremock.workspace = true
tokio-test.workspace = true
tempfile.workspace = true
reqwest = { workspace = true, features = ["json"] }

[features]
default = ["full"]
full = []
minimal = []
core = []